hot fix for the conversation for the evm upgrades

--- a/docs/dapp/09-web3.md
+++ b/docs/dapp/09-web3.md
@@ -24,13 +24,13 @@
 - ✅  &nbsp; eth_getTransactionByBlockNumberAndIndex
 - ✅  &nbsp; eth_getTransactionReceipt
 - ✅  &nbsp; eth_getLogs
-- [ ] eth_hashrate
-- [ ] eth_syncing
-- [ ] eth_mining
-- [ ] eth_getUncleCountByBlockHash
-- [ ] eth_getUncleCountByBlockNumber
-- [ ] eth_getUncleByBlockHashAndIndex
-- [ ] eth_getUncleByBlockNumberAndIndex
-- [ ] eth_getWork
-- [ ] eth_submitWork
-- [ ] eth_submitHashrate
+- eth_hashrate
+- eth_syncing
+- eth_mining
+- eth_getUncleCountByBlockHash
+- eth_getUncleCountByBlockNumber
+- eth_getUncleByBlockHashAndIndex
+- eth_getUncleByBlockNumberAndIndex
+- eth_getWork
+- eth_submitWork
+- eth_submitHashrate
