--- a/docs/dapp/09-web3.md
+++ b/docs/dapp/09-web3.md
@@ -1,36 +1,36 @@
 # Web3 Compatibility
 ## Web3 JSON-RPC protocol
 
-- ✅  &nbsp; eth_protocolVersion 
-- ✅  &nbsp; eth_chainId
-- ✅  &nbsp; eth_accounts
-- ✅  &nbsp; eth_getBalance
-- ✅  &nbsp; eth_sendTransaction
-- ✅  &nbsp; eth_call
-- ✅  &nbsp; eth_coinbase
-- ✅  &nbsp; eth_gasPrice
-- ✅  &nbsp; eth_blockNumber
-- ✅  &nbsp; eth_getStorageAt
-- ✅  &nbsp; eth_getBlockByHash
-- ✅  &nbsp; eth_getBlockByNumber
-- ✅  &nbsp; eth_getTransactionCount
-- ✅  &nbsp; eth_getBlockTransactionCountByHash
-- ✅  &nbsp; eth_getBlockTransactionCountByNumber
-- ✅  &nbsp; eth_getCode
-- ✅  &nbsp; eth_sendRawTransaction
-- ✅  &nbsp; eth_estimateGas
-- ✅  &nbsp; eth_getTransactionByHash
-- ✅  &nbsp; eth_getTransactionByBlockHashAndIndex
-- ✅  &nbsp; eth_getTransactionByBlockNumberAndIndex
-- ✅  &nbsp; eth_getTransactionReceipt
-- ✅  &nbsp; eth_getLogs
-- eth_hashrate
-- eth_syncing
-- eth_mining
-- eth_getUncleCountByBlockHash
-- eth_getUncleCountByBlockNumber
-- eth_getUncleByBlockHashAndIndex
-- eth_getUncleByBlockNumberAndIndex
-- eth_getWork
-- eth_submitWork
-- eth_submitHashrate
+- [x] eth_protocolVersion
+- [x] eth_chainId
+- [x] eth_accounts
+- [x] eth_getBalance
+- [x] eth_sendTransaction
+- [x] eth_call
+- [x] eth_coinbase
+- [x] eth_gasPrice
+- [x] eth_blockNumber
+- [x] eth_getStorageAt
+- [x] eth_getBlockByHash
+- [x] eth_getBlockByNumber
+- [x] eth_getTransactionCount
+- [x] eth_getBlockTransactionCountByHash
+- [x] eth_getBlockTransactionCountByNumber
+- [x] eth_getCode
+- [x] eth_sendRawTransaction
+- [x] eth_estimateGas
+- [x] eth_getTransactionByHash
+- [x] eth_getTransactionByBlockHashAndIndex
+- [x] eth_getTransactionByBlockNumberAndIndex
+- [x] eth_getTransactionReceipt
+- [x] eth_getLogs
+- [ ] eth_hashrate
+- [ ] eth_syncing
+- [ ] eth_mining
+- [ ] eth_getUncleCountByBlockHash
+- [ ] eth_getUncleCountByBlockNumber
+- [ ] eth_getUncleByBlockHashAndIndex
+- [ ] eth_getUncleByBlockNumberAndIndex
+- [ ] eth_getWork
+- [ ] eth_submitWork
+- [ ] eth_submitHashrate
