Fixes to broken links and network

--- a/docs/networks/network.mdx
+++ b/docs/networks/network.mdx
@@ -46,7 +46,7 @@ Mainnet is the release environment.
 <TabItem value="testnet">
 
 ## Test Networks
-### Testnet-anvil
+### Testnet-anvil (Primary Test Network)
 
 - **Version**: https://prod-testnet.prod.findora.org:8668/version
 
@@ -72,11 +72,12 @@ Mainnet is the release environment.
 - **Block Explorer**: [Findora Explorer (findorascan.io)](https://prod-testnet.findorascan.io/)
 
 - **EVM Explorer**: https://testnet-anvil.evm.findorascan.io
+- **Rialto Bridge** : https://anvil.rialtobridge.io
 
 ### Mainnet-Mock
 
 - Version: https://dev-mainnetmock.dev.findora.org:8668/version
-- Tendermint RPC** : https://dev-mainnetmock.dev.findora.org:26656
+- **Tendermint RPC** : https://dev-mainnetmock.dev.findora.org:26656
 - **Query server RPC** : https://dev-mainnetmock.dev.findora.org:8668
 - **Chain ID**:  ```2152```
 - **EVM RPC** : https://dev-mainnetmock.dev.findora.org:8545
@@ -96,7 +97,7 @@ Mainnet is the release environment.
 - **EVM Explorer**: [Findora FRA Explorer](https://dev-mainnetmock-blockscout.dev.findora.org/)
 
 
-### Testnet - Forge
+### Testnet - Forge - ( Not Functional )
 - **Version**: https://prod-forge.prod.findora.org:8668/version
 - **Tendermint RPC** : https://prod-forge.prod.findora.org:26656
 - **Query server RPC** : https://prod-forge.prod.findora.org:8668
