--- a/docs/developers/utxo/sdk_api.mdx
+++ b/docs/developers/utxo/sdk_api.mdx
@@ -367,7 +367,7 @@ This method is used to get details of given block.
 
 ##### Parameters:
 
-- &nbsp; `<number>` - block heigth
+- &nbsp; `<number>` - block Height
 - &nbsp; `<NetworkAxiosConfig>` - (optinal) network config
 
 ##### Results:
@@ -1035,4 +1035,279 @@ const transactionBuilder = await StakingApi.unStake(
 );
 
 const resultHandle = await Transaction.submitTransaction(transactionBuilder);
+```
+
+## Transaction
+
+### getTransactionBuilder
+
+**_- Create an instance of `TransactionBuilder`_**  
+This method is used to create a transaction builder
+
+##### Results:
+
+- &nbsp; `Promise<TransactionBuilder>` - TransactionBuilder which should be used in `Transaction.submitTransaction`.
+
+##### Example:
+
+```jsx
+// Create a TransactionBuilder object
+const transactionBuilder = await Transaction.getTransactionBuilder();
+```
+
+### getTxList
+
+**_- Get a list of transactions for given wallet address_**  
+This method is used to get a list of transactions for given wallet address
+
+##### Parameters:
+
+- &nbsp; `<string>` - wallet address
+- &nbsp; `<"to" | "from">` - transaction type. it can only be 'to' or 'from'
+- &nbsp; `<number>` - pagination. The defaul value is 1.
+
+##### Results:
+
+- &nbsp; `Promise<ProcessedTxListResponseResult>` - An instance of `ProcessedTxListResponseResult` containing the total count and transactions.
+
+##### Example:
+
+```jsx
+const address = `fra000xxsr`;
+const type = "to";
+
+// Get list of `to` transaction of given address
+const txDetail = await Transaction.getTxList(address, type);
+```
+
+### sendToAddress
+
+**_- Send some asset to an address_**  
+Using this function, user can transfer some amount of given asset to another address
+
+##### Parameters:
+
+- &nbsp; `<WalletKeypar>` - wallet keypair
+- &nbsp; `<string>` - target wallet address
+- &nbsp; `<string>` - amount to be sent
+- &nbsp; `<string>` - asset code
+- &nbsp; `<AssetBlindRules>` - (optional) confidential options for blind rule
+
+##### Results:
+
+- &nbsp; `Promise<TransactionBuilder>` - A TransactionBuilder which should be used in Transaction.submitTransaction
+
+##### Example:
+
+```jsx
+const walletInfo = await Keypair.restoreFromPrivateKey(pkey, password);
+const toWalletInfo = await Keypair.restoreFromPrivateKey(toPkeyMine2, password);
+
+const assetCode = await Asset.getFraAssetCode();
+
+const assetBlindRules: Asset.AssetBlindRules = {
+  isTypeBlind: false,
+  isAmountBlind: false,
+};
+
+const transactionBuilder = await Transaction.sendToAddress(
+  walletInfo,
+  toWalletInfo.address,
+  "2",
+  assetCode,
+  assetBlindRules
+);
+
+const resultHandle = await Transaction.submitTransaction(transactionBuilder);
+```
+
+### sendToMany
+
+**_- Send some asset to multiple receivers_**  
+Using this function, user can transfer perform multiple transfers of the same asset to multiple receivers using different amounts
+
+##### Parameters:
+
+- &nbsp; `<WalletKeypar>` - wallet keypair
+- &nbsp; `<TransferReciever[]>` - the list of target wallet addresses and amount
+- &nbsp; `<string>` - asset code
+- &nbsp; `<AssetBlindRules>` - (optional) confidential options for blind rule
+
+##### Results:
+
+- &nbsp; `Promise<TransactionBuilder>` - A TransactionBuilder which should be used in Transaction.submitTransaction
+
+##### Example:
+
+```jsx
+const walletInfo = await Keypair.restoreFromPrivateKey(pkey, password);
+const toWalletInfoMine2 = await Keypair.restoreFromPrivateKey(
+  toPkeyMine2,
+  password
+);
+const toWalletInfoMine3 = await Keypair.restoreFromPrivateKey(
+  toPkeyMine3,
+  password
+);
+
+const assetCode = await Asset.getFraAssetCode();
+
+const assetBlindRules: Asset.AssetBlindRules = {
+  isTypeBlind: false,
+  isAmountBlind: false,
+};
+
+const recieversInfo = [
+  { reciverWalletInfo: toWalletInfoMine2, amount: "2" },
+  { reciverWalletInfo: toWalletInfoMine3, amount: "3" },
+];
+
+const transactionBuilder = await Transaction.sendToMany(
+  walletInfo,
+  recieversInfo,
+  assetCode,
+  assetBlindRules
+);
+
+const resultHandle = await Transaction.submitTransaction(transactionBuilder);
+```
+
+### sendToPublicKey
+
+**_- Send some asset to a wallet by public key_**  
+Using this function, user can transfer some amount of given asset to another wallet by target's public key
+
+##### Parameters:
+
+- &nbsp; `<WalletKeypar>` - wallet keypair
+- &nbsp; `<string>` - target's public key
+- &nbsp; `<string>` - amount to be sent
+- &nbsp; `<string>` - asset code
+- &nbsp; `<AssetBlindRules>` - (optional) confidential options for blind rule
+
+##### Results:
+
+- &nbsp; `Promise<TransactionBuilder>` - A TransactionBuilder which should be used in Transaction.submitTransaction
+
+##### Example:
+
+```jsx
+const walletInfo = await Keypair.restoreFromPrivateKey(pkey, password);
+const toWalletPublicKey = `tgshauuy213`;
+
+const assetCode = await Asset.getFraAssetCode();
+
+const assetBlindRules: Asset.AssetBlindRules = {
+  isTypeBlind: false,
+  isAmountBlind: false,
+};
+
+const transactionBuilder = await Transaction.sendToPublicKey(
+  walletInfo,
+  toWalletPublicKey,
+  "2",
+  assetCode,
+  assetBlindRules
+);
+
+const resultHandle = await Transaction.submitTransaction(transactionBuilder);
+```
+
+### submitTransaction
+
+**_- Submits a transaction_**  
+The next step after creating a transaction is submitting it to the ledger, and, as a response, we retrieve the transaction handle.
+
+##### Parameters:
+
+- &nbsp; `<TransactionBuilder>` - an instance of `TransactionBuilder`
+
+##### Results:
+
+- &nbsp; `Promise<string>` - Transaction status handle
+
+##### Example:
+
+```jsx
+onst walletInfo = await Keypair.restoreFromPrivateKey(pkey, password);
+
+// First, we create a transaction builder
+const assetBuilder = await Asset.defineAsset(walletInfo, assetCode);
+
+// Then, we submit a transaction
+// If succcesful, the response of the submit transaction request will return a handle that can be used the query the status of the transaction.
+const handle = await Transaction.submitTransaction(assetBuilder);
+```
+
+## Helpers
+
+### getBlockTime
+
+**_- Get Block Time by given block height._**  
+Using this function, user can get block time by given block height
+
+##### Parameters:
+
+- &nbsp; `<number>` - block height
+
+##### Results:
+
+- &nbsp; `Promise<undefined | string>` - Block time
+
+##### Example:
+
+```jsx
+const blockHeight = 2341;
+// Get block time at Block #2341
+const blockTime = await helpers.getBlockTime(blockHeight);
+```
+
+### getTxListFromResponse
+
+**_- Get Transaction List by given transaction data response._**  
+Using this function, user can Get Transaction List by given transaction data response
+
+##### Parameters:
+
+- &nbsp; `<TxListDataResult>` - transaction data response
+
+##### Results:
+
+- &nbsp; `Promise<null | TxInfo[]>` - transaction list
+
+##### Example:
+
+```jsx
+const address = "fra12dsfew";
+const type = "to";
+const dataResult = await Network.getTxList(address, type);
+// Get tx list
+const txList = await helpers.getTxListFromResponse();
+```
+
+### getTxOperationsList
+
+**_- Get Operation List by given parsed transaction_**  
+Using this function, user can Get Transaction List by given parsed transaction
+
+##### Parameters:
+
+- &nbsp; `<ParsedTx>` - parsed tx info
+
+##### Results:
+
+- &nbsp; `TxOperation[]>` - transaction operation list
+
+##### Example:
+
+```jsx
+const address = "fra12dsfew";
+const type = "to";
+const dataResult = await Network.getTxList(address, type);
+// Get tx list
+const txList = await helpers.getTxListFromResponse();
+// Get one parsed tx
+parsedTx = JSON.parse(Base64.decode(txList[0].tx));
+// Get operation Lsit
+opList = helpers.getTxOperationsList(parsedTx);
 ```
