--- a/docs/developers/evm/01-web3.md
+++ b/docs/developers/evm/01-web3.md
@@ -1,7 +1,7 @@
 # Web3 Compatibility
 ## Web3 JSON-RPC protocol
 
-- ✅  &nbsp; eth_protocolVersion 
+- ✅  &nbsp; [eth_protocolVersion](#eth_protocolversion) 
 - ✅  &nbsp; eth_chainId
 - ✅  &nbsp; eth_accounts
 - ✅  &nbsp; eth_getBalance
@@ -34,3 +34,25 @@
 - eth_getWork
 - eth_submitWork
 - eth_submitHashrate
+
+
+### eth_protocolVersion
+___
+Returns the current ethereum protocol version.
+#### Parameters
+none
+#### Returns 
+`String` - The current ethereum protocol version
+#### Example
+```shell
+// Request
+curl -X POST --data '{"jsonrpc":"2.0","method":"eth_protocolVersion","params":[],"id":67}'
+
+// Result
+{
+  "id":67,
+  "jsonrpc": "2.0",
+  "result": "54"
+}
+```
+
