--- a/docs/developers/evm/01-web3.md
+++ b/docs/developers/evm/01-web3.md
@@ -44,15 +44,20 @@ none
 #### Returns 
 `String` - The current ethereum protocol version
 #### Example
-```shell
-// Request
-curl -X POST --data '{"jsonrpc":"2.0","method":"eth_protocolVersion","params":[],"id":67}'
 
-// Result
+Request
+```shell
+curl --data '{"method":"eth_protocolVersion","params":[],"id":1,"jsonrpc":"2.0"}' -H "Content-Type: application/json" -X POST localhost:8545
+```
+
+Response 
+```shell
 {
-  "id":67,
+  "id": 1,
   "jsonrpc": "2.0",
-  "result": "54"
+  "result": "54" // 1207
 }
 ```
+
+
 
