more format fixes

--- a/docs/developers/evm/01-web3.md
+++ b/docs/developers/evm/01-web3.md
@@ -2,7 +2,7 @@
 ## Web3 JSON-RPC protocol
 
 - ✅  &nbsp; [eth_protocolVersion](#eth_protocolversion) 
-- ✅  &nbsp; eth_chainId
+- ✅  &nbsp; [eth_chainId](#eth_chainid)
 - ✅  &nbsp; eth_accounts
 - ✅  &nbsp; eth_getBalance
 - ✅  &nbsp; eth_sendTransaction
@@ -38,7 +38,7 @@
 
 ### eth_protocolVersion
 ___
-Returns the current ethereum protocol version.
+Returns the current findora protocol version.
 #### Parameters
 none
 #### Returns 
@@ -47,7 +47,10 @@ none
 
 Request
 ```shell
-curl --data '{"method":"eth_protocolVersion","params":[],"id":1,"jsonrpc":"2.0"}' -H "Content-Type: application/json" -X POST localhost:8545
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_protocolVersion","params":[],"id":1,"jsonrpc":"2.0"}'
 ```
 
 Response 
@@ -55,9 +58,33 @@ Response
 {
   "id": 1,
   "jsonrpc": "2.0",
-  "result": "54" // 1207
+  "result": "54"
 }
 ```
 
 
+### eth_chainId
+___
+Returns the current findora chain ID
+#### Parameters
+none
+#### Returns 
+`String` - The current findora chain ID
+#### Example
 
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_chainId","params":[],"id":1,"jsonrpc":"2.0"}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0x869" # 2153
+}
+```
