--- a/docs/developers/evm/01-web3.md
+++ b/docs/developers/evm/01-web3.md
@@ -3,27 +3,27 @@
 
 - ✅  &nbsp; [eth_protocolVersion](#eth_protocolversion) 
 - ✅  &nbsp; [eth_chainId](#eth_chainid)
-- ✅  &nbsp; eth_accounts
-- ✅  &nbsp; eth_getBalance
-- ✅  &nbsp; eth_sendTransaction
-- ✅  &nbsp; eth_call
-- ✅  &nbsp; eth_coinbase
-- ✅  &nbsp; eth_gasPrice
-- ✅  &nbsp; eth_blockNumber
-- ✅  &nbsp; eth_getStorageAt
-- ✅  &nbsp; eth_getBlockByHash
-- ✅  &nbsp; eth_getBlockByNumber
-- ✅  &nbsp; eth_getTransactionCount
-- ✅  &nbsp; eth_getBlockTransactionCountByHash
-- ✅  &nbsp; eth_getBlockTransactionCountByNumber
-- ✅  &nbsp; eth_getCode
-- ✅  &nbsp; eth_sendRawTransaction
-- ✅  &nbsp; eth_estimateGas
-- ✅  &nbsp; eth_getTransactionByHash
-- ✅  &nbsp; eth_getTransactionByBlockHashAndIndex
-- ✅  &nbsp; eth_getTransactionByBlockNumberAndIndex
-- ✅  &nbsp; eth_getTransactionReceipt
-- ✅  &nbsp; eth_getLogs
+- ✅  &nbsp; [eth_accounts](#eth_accounts)
+- ✅  &nbsp; [eth_getBalance](#eth_getbalance)
+- ✅  &nbsp; [eth_sendTransaction](#eth_sendtransaction)
+- ✅  &nbsp; [eth_call](#eth_call)
+- ✅  &nbsp; [eth_coinbase](#eth_coinbase)
+- ✅  &nbsp; [eth_gasPrice](#eth_gasprice)
+- ✅  &nbsp; [eth_blockNumber](#eth_blocknumber)
+- ✅  &nbsp; [eth_getStorageAt](#eth_getstorageat)
+- ✅  &nbsp; [eth_getBlockByHash](#eth_getblockbyhash)
+- ✅  &nbsp; [eth_getBlockByNumber](#eth_getblockbynumber)
+- ✅  &nbsp; [eth_getTransactionCount](#eth_gettransactioncount)
+- ✅  &nbsp; [eth_getBlockTransactionCountByHash](#eth_getblocktransactioncountbyhash)
+- ✅  &nbsp; [eth_getBlockTransactionCountByNumber](#eth_getblocktransactioncountbynumber)
+- ✅  &nbsp; [eth_getCode](#eth_getcode)
+- ✅  &nbsp; [eth_sendRawTransaction](#eth_sendrawtransaction)
+- ✅  &nbsp; [eth_estimateGas](#eth_estimategas)
+- ✅  &nbsp; [eth_getTransactionByHash](#eth_gettransactionbyhash)
+- ✅  &nbsp; [eth_getTransactionByBlockHashAndIndex](#eth_gettransactionbyblockhashandindex)
+- ✅  &nbsp; [eth_getTransactionByBlockNumberAndIndex](#eth_gettransactionbyblocknumberandindex)
+- ✅  &nbsp; [eth_getTransactionReceipt](#eth_gettransactionreceipt)
+- ✅  &nbsp; [eth_getLogs](#eth_getlogs)
 - eth_hashrate
 - eth_syncing
 - eth_mining
@@ -61,7 +61,7 @@ Response
   "result": "54"
 }
 ```
-
+[back to top](#web3-json-rpc-protocol)
 
 ### eth_chainId
 ___
@@ -88,3 +88,281 @@ Response
   "result": "0x869" # 2153
 }
 ```
+[back to top](#web3-json-rpc-protocol)
+
+### eth_accounts
+___
+Returns a list of addresses owned by client.
+#### Parameters
+none
+#### Returns 
+`Array` - 20 Bytes - addresses owned by the client.
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+    -X POST \
+    -H "Content-Type: application/json" \
+    -d '{"jsonrpc":"2.0","method":"eth_accounts","params":[],"id":1}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": ["0x407d73d8a49eeb85d32cf465507dd71d507100c1"]
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_getBalance
+___
+Returns a list of addresses owned by client.
+#### Parameters
+0. `Address` - 20 Bytes - address to check for balance.
+1. `Quantity or Tag` - (optional) Integer block number, or the string 'latest', 'earliest' or 'pending'.
+```shell
+params: ["0x407d73d8a49eeb85d32cf465507dd71d507100c1"]
+```
+#### Returns 
+`Quantity` - integer of the current balance in wei.
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_getBalance","params":["0x8D97689C9818892B700e27F316cc3E41e17fBeb9", "latest"],"id":1,"jsonrpc":"2.0"}'
+
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0x0234c8a3397aab58"
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_sendTransaction
+___
+Creates new message call transaction or a contract creation, if the data field contains code.
+#### Parameters
+0. `Object` - The transaction object
+* `from`: `Address` - 20 Bytes - The address the transaction is send from.
+* `to`: `Address` - (optional) 20 Bytes - The address the transaction is directed to.
+* `gas`: `Quantity` - (optional) Integer of the gas provided for the transaction execution. eth_call consumes zero gas, but this parameter may be needed by some executions.
+* `gasPrice`: `Quantity` - (optional) Integer of the gas price used for each paid gas.
+* `value`: `Quantity` - (optional) Integer of the value sent with this transaction.
+* `data`: `Data` - (optional) 4 byte hash of the method signature followed by encoded parameters. For details see Ethereum Contract ABI.
+* `nonce`: `Quantity` - (optional) Integer of a nonce. This allows to overwrite your own pending transactions that use the same nonce.
+* `condition`: `Object` - (optional) Conditional submission of the transaction. Can be either an integer block number { block: 1 } or UTC timestamp (in seconds) { time: 1491290692 } or null.
+
+```shell
+params: [{
+  "from": "0xb60e8dd61c5d32be8058bb8eb970870f07233155",
+  "to": "0xd46e8dd67c5d32be8058bb8eb970870f07244567",
+  "gas": "0x76c0", // 30400
+  "gasPrice": "0x9184e72a000", // 10000000000000
+  "value": "0x9184e72a", // 2441406250
+  "data": "0xd46e8dd67c5d32be8d46e8dd67c5d32be8058bb8eb970870f072445675058bb8eb970870f072445675"
+}]
+```
+#### Returns 
+`Hash` - 32 Bytes - the transaction hash, or the zero hash if the transaction is not yet available.
+
+Use eth_getTransactionReceipt to get the contract address, after the transaction was mined, when you created a contract.
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_sendTransaction","params":[{"from":"0xb60e8dd61c5d32be8058bb8eb970870f07233155","to":"0xd46e8dd67c5d32be8058bb8eb970870f07244567","gas":"0x76c0","gasPrice":"0x9184e72a000","value":"0x9184e72a","data":"0xd46e8dd67c5d32be8d46e8dd67c5d32be8058bb8eb970870f072445675058bb8eb970870f072445675"}],"id":1,"jsonrpc":"2.0"}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0xe670ec64341771606e55d6b4ca35a1a6b75ee3d5145a99d05921026d1527331"
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_call
+___
+Creates new message call transaction or a contract creation, if the data field contains code.
+#### Parameters
+0. `Object` - The transaction call object
+* `from`: `Address` - 20 Bytes - The address the transaction is send from.
+* `to`: `Address` - (optional) 20 Bytes - The address the transaction is directed to.
+* `gas`: `Quantity` - (optional) Integer of the gas provided for the transaction execution. eth_call consumes zero gas, but this parameter may be needed by some executions.
+* `gasPrice`: `Quantity` - (optional) Integer of the gas price used for each paid gas.
+* `value`: `Quantity` - (optional) Integer of the value sent with this transaction.
+* `data`: `Data` - (optional) 4 byte hash of the method signature followed by encoded parameters. For details see Ethereum Contract ABI.
+1. `Quantity` or `Tag` - (optional) Integer block number, or the string 'latest', 'earliest' or 'pending'.
+```shell
+params: [{
+  "from": "0x407d73d8a49eeb85d32cf465507dd71d507100c1",
+  "to": "0xa94f5374fce5edbc8e2a8697c15331677e6ebf0b",
+  "value": "0x186a0" // 100000
+}]
+```
+#### Returns 
+`Data` - the return value of executed contract.
+
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_call","params":[{"from":"0x407d73d8a49eeb85d32cf465507dd71d507100c1","to":"0xa94f5374fce5edbc8e2a8697c15331677e6ebf0b","value":"0x186a0"}],"id":1,"jsonrpc":"2.0"}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0x"
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_coinbase
+___
+Returns the client coinbase address.
+#### Parameters
+none
+#### Returns 
+`Data` - 20 bytes - the current coinbase address.
+
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"jsonrpc":"2.0","method":"eth_coinbase","params":[],"id":1}'
+```
+
+Response 
+```shell
+{
+  "id":64,
+  "jsonrpc": "2.0",
+  "result": "0x407d73d8a49eeb85d32cf465507dd71d507100c1"
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_gasPrice
+___
+Returns the current price per gas in wei.
+#### Parameters
+none
+#### Returns 
+`Quantity` - integer of the current gas price in wei.
+
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_gasPrice","params":[],"id":1,"jsonrpc":"2.0"}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0x9184e72a000" // 10000000000000
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_blockNumber
+___
+Returns the number of the most recent block.
+#### Parameters
+none
+#### Returns 
+`Quantity` - integer of the current block number the client is on.
+
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_blockNumber","params":[],"id":1,"jsonrpc":"2.0"}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0x4b7" // 1207
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_getStorageAt
+___
+Returns the value from a storage position at a given address.
+#### Parameters
+0. `Address` - 20 Bytes - address of the storage.
+1. `Quantity` - integer of the position in the storage.
+2. `Quantity` or `Tag` - (optional) integer block number, or the string 'latest', 'earliest' or 'pending'.
+
+```shell
+params: [
+  "0x407d73d8a49eeb85d32cf465507dd71d507100c1",
+  "0x0", // 0
+  "0x2" // 2
+]
+```
+#### Returns 
+`Data` - the value at this storage position.
+
+#### Example
+
+Request
+```shell
+curl localhost:8545 \
+  -X POST \
+  -H "Content-Type: application/json" \
+  --data '{"method":"eth_getStorageAt","params":["0x407d73d8a49eeb85d32cf465507dd71d507100c1","0x0","0x2"],"id":1,"jsonrpc":"2.0"}'
+```
+
+Response 
+```shell
+{
+  "id": 1,
+  "jsonrpc": "2.0",
+  "result": "0x0000000000000000000000000000000000000000000000000000000000000003"
+}
+```
+[back to top](#web3-json-rpc-protocol)
+### eth_getBlockByHash
+### eth_getBlockByNumber
+### eth_getTransactionCount
+### eth_getBlockTransactionCountByHash
+### eth_getBlockTransactionCountByNumber
+### eth_getCode
+### eth_sendRawTransaction
+### eth_estimateGas
+### eth_getTransactionByHash
+### eth_getTransactionByBlockHashAndIndex
+### eth_getTransactionByBlockNumberAndIndex
+### eth_getTransactionReceipt
+### eth_getLogs
