reorganize the network tables

--- a/docs/network.mdx
+++ b/docs/network.mdx
@@ -17,21 +17,23 @@ import TabItem from "@theme/TabItem";
   <TabItem value="evm">
     <table>
       <tr>
+        <th></th>
+        <th>Mainnet</th>
+        <th>Testnet</th>
+      </tr>
+      <tr>
         <th>Chain ID</th>
-        <th>Network Name</th>
-        <th>RPC</th>
-        <th>Explorer</th>
-      </tr>
-      <tr>
         <td>2152</td>
-        <td>Findora Mainnet</td>
-        <td>https://rpc-mainnet.findora.org</td>
-        <td>https://evm.findorascan.io</td>
+        <td>2153</td>
       </tr>
       <tr>
-        <td>2153</td>
-        <td>Anvil Testnet</td>
+        <th>RPC</th>
+        <td>https://rpc-mainnet.findora.org</td>
         <td>https://prod-testnet.prod.findora.org:8545</td>
+      </tr>
+      <tr>
+        <th>Explorer</th>
+        <td>https://evm.findorascan.io</td>
         <td>https://testnet-anvil.evm.findorascan.io/</td>
       </tr>
     </table>
@@ -39,18 +41,18 @@ import TabItem from "@theme/TabItem";
   <TabItem value="utxo">
     <table>
       <tr>
-        <th>Network Name</th>
-        <th>Network Node</th>
-        <th>Explorer</th>
+        <th></th>
+        <th>Mainnet</th>
+        <th>Testnet</th>
       </tr>
       <tr>
-        <td>Findora Mainnet</td>
+        <th>Node</th>
         <td>https://prod-mainnet.prod.findora.org</td>
-        <td>https://findorascan.io</td>
+        <td>https://prod-testnet.prod.findora.org</td>
       </tr>
       <tr>
-        <td>Anvil Testnet</td>
-        <td>https://prod-testnet.prod.findora.org</td>
+        <th>Explorer</th>
+        <td>https://findorascan.io</td>
         <td>https://prod-testnet.findorascan.io</td>
       </tr>
     </table>
