More restructure for Developers

--- a/docs/developers/evm/01 - web3.md
+++ b/docs/developers/evm/01 - web3.md
@@ -2,43 +2,8 @@
 sidebar_position: 2
 ---
 
-# Web3 Compatibility
+# EVM API Reference 
 ## Web3 JSON-RPC protocol
-
-- ✅  &nbsp; [eth_protocolVersion](#eth_protocolversion) 
-- ✅  &nbsp; [eth_chainId](#eth_chainid)
-- ✅  &nbsp; [eth_accounts](#eth_accounts)
-- ✅  &nbsp; [eth_getBalance](#eth_getbalance)
-- ✅  &nbsp; [eth_sendTransaction](#eth_sendtransaction)
-- ✅  &nbsp; [eth_call](#eth_call)
-- ✅  &nbsp; [eth_coinbase](#eth_coinbase)
-- ✅  &nbsp; [eth_gasPrice](#eth_gasprice)
-- ✅  &nbsp; [eth_blockNumber](#eth_blocknumber)
-- ✅  &nbsp; [eth_getStorageAt](#eth_getstorageat)
-- ✅  &nbsp; [eth_getBlockByHash](#eth_getblockbyhash)
-- ✅  &nbsp; [eth_getBlockByNumber](#eth_getblockbynumber)
-- ✅  &nbsp; [eth_getTransactionCount](#eth_gettransactioncount)
-- ✅  &nbsp; [eth_getBlockTransactionCountByHash](#eth_getblocktransactioncountbyhash)
-- ✅  &nbsp; [eth_getBlockTransactionCountByNumber](#eth_getblocktransactioncountbynumber)
-- ✅  &nbsp; [eth_getCode](#eth_getcode)
-- ✅  &nbsp; [eth_sendRawTransaction](#eth_sendrawtransaction)
-- ✅  &nbsp; [eth_estimateGas](#eth_estimategas)
-- ✅  &nbsp; [eth_getTransactionByHash](#eth_gettransactionbyhash)
-- ✅  &nbsp; [eth_getTransactionByBlockHashAndIndex](#eth_gettransactionbyblockhashandindex)
-- ✅  &nbsp; [eth_getTransactionByBlockNumberAndIndex](#eth_gettransactionbyblocknumberandindex)
-- ✅  &nbsp; [eth_getTransactionReceipt](#eth_gettransactionreceipt)
-- ✅  &nbsp; [eth_getLogs](#eth_getlogs)
-- eth_hashrate
-- eth_syncing
-- eth_mining
-- eth_getUncleCountByBlockHash
-- eth_getUncleCountByBlockNumber
-- eth_getUncleByBlockHashAndIndex
-- eth_getUncleByBlockNumberAndIndex
-- eth_getWork
-- eth_submitWork
-- eth_submitHashrate
-
 
 ### eth_protocolVersion
 ___
